<resources>
    <string name="app_name">Brightness</string>
    <string name="app_title">Auto Brightness</string>
    <string name="allow_modifying_system_settings">Please, allow modifying system settings!</string>
    <string name="allow_draw_overlay_settings">Please, allow display over other apps!</string>
    <string name="label_current_lux">Current Value</string>
    <string name="label_highest_lux">Highest Value</string>
    <string name="label_lux_meter">Lux Meter:</string>
    <string name="label_brightness_level">Brightness Level :</string>
    <string name="label_brightness_mode">Brightness Mode :</string>
    <string name="label_brightness_preset">Brightness Preset :</string>
    <string name="label_zero">0</string>
    <string name="label_zero_float">0.0</string>
    <string name="label_zero_percent">0%</string>
    <string name="button_3">3%</string>
    <string name="button_10">10%</string>
    <string name="button_25">25%</string>
    <string name="button_50">50%</string>
    <string name="button_75">75%</string>
    <string name="button_automatic">Automatic</string>
    <string name="button_manual">Manual</string>
    <string name="button_override">Override</string>
    <string name="menu_restart_service">Restart Service</string>
    <string name="menu_about">About</string>
    <string name="menu_exit">Shutdown</string>
    <string name="text_about">Aplikasi ini saya buat khusus untuk mengatasi masalah brightness pada device Redmi 3S/X (codename: land).</string>
    <string name="telegram">Telegram</string>
    <string name="close">Close</string>
</resources>
